<resources>
    <string name="app_name">מרכז קהילתי פאני קפלן פת</string>
    <string name="text_about">אודות</string>
    <string name="text_news">מה חדש במרכז</string>
    <string name="text_business">עסקים בשכונה</string>
    <string name="text_projects">פרויקטים</string>
    <string name="text_activities">חוגים</string>
    <string name="text_workshops">סדנאות</string>
    <string name="text_team">צוות המרכז</string>
    <string name="text_gallery">גלריית תמונות</string>
    <string name="text_contactus">צור קשר</string>
    <string name="contactUs_title">צור קשר</string>
    <string name="contactus_Taddress">כתובת: </string>
    <string name="contactus_address">\r\n מוריס פישר 20 \r\n שכונת פת \r\n ירושלים</string>
    <string name="form_title">כתוב לנו</string>
    <string name="form_name">שם*</string>
    <string name="form_phone">מספר נייד*</string>
    <string name="form_message">ההודעה שלך*</string>
    <string name="form_btn">שלח</string>
    <string name="minimum_password">הסיסמא קצרה מדי, הכנס 6 תווים לפחות!</string>
    <string name="auth_failed">האימות נכשל, בדוק שוב את האימייל או הסיסמא</string>
    <string name="actions_manager">מה תרצה לעשות?</string>
    <string name="title_activity_login">מנהל</string>
    <string name="hint_email">אימייל</string>
    <string name="hint_password">סיסמא</string>
    <string name="btn_login">היכנס</string>
    <string name="btn_forgot_password">שכחת את הסיסמא? לחץ כאן</string>
    <string name="btn_reset_password">אפס סיסמא</string>
    <string name="btn_sign_out">התנתק</string>
    <string name="lbl_forgot_password">שכחת סיסמא?</string>
    <string name="forgot_password_msg">הזן את כתובת האימייל שלך בכדי לשלוח לך הוראות לאיפוס סיסמא באימייל</string>
    <string-array name="actions">
        <item>העלאת תמונות לגלריה</item>
        <item>הוספת חדשות</item>
        <item>הוספת חוג חדש</item>
        <item>עריכת חוג קיים</item>
        <item>מחיקת חוג קיים</item>
        <item>הוספת פרויקט חדש</item>
        <item>עריכת פרויקט קיים</item>
        <item>מחיקת פרויקט קיים</item>
        <item>הוספת סדנא חדשה</item>
        <item>עריכת סדנא קיימת</item>
        <item>מחיקת סדנא קיימת</item>
        <item>הוספת איש צוות</item>
        <item>עריכת איש צוות קיים</item>
        <item>מחיקת איש צוות</item>
        <item>הוספת עסק חדש</item>
        <item>עריכת עסק קיים</item>
        <item>מחיקת עסק קיים</item>
    </string-array>
    <string name="about">
שכונת פת, הממוקמת באזור מרכזי בירושלים, מהווה בשנים האחרונות מקור משיכה למשפחות צעירות. בשכונה מגוון אנושי רחב: אזרחים ותיקים, עולים חדשים, דתיים, חילונים. אנו פועלים כמרכז קהילתי בשכונה, בתחומים שונים ומגוונים. קהלי היעד שלנו הם נשים, משפחות, ילדים, נוער, צעירים, גיל שלישי, אנשי עסקים ועוד…

 לכל קבוצה אנו מתאימים את הפעילות על פי צורכי התושבים.

אנו חלק מרשת מרכזים של עמותת פאני קפלן. הרבנית פאני קפלן, שעל שמה העמותה, הקימה מספר מרכזים קהילתיים שנועדו להנגיש תרבות והעשרה לכלל האוכלוסייה. "לא על הלחם לבדו יחייה האדם"- תרבות, חוגים, השכלה, ספרות, הם המזון לנשמה וחשובים לא פחות מפת הלחם.

החזון שלנו הוא להוות בית לקהילה ולעמוד לרשותה במה שיידרש, על מנת לראותה צומחת ומתחזקת.

        \n


השירותים הניתנים על ידי המרכז:

גיל רך – חוגים, שעת סיפור אחת לשבוע + שעת יצירה בכניסה חופשית, קייטנות פסח וקיץ, הצגות, סדנאות.

ילדים ונוער – חוגים, פעילויות תרבות והעשרה, פרויקט בר ובת מצוה.

כל המשפחה– ספריפת – ספרייה שהוקמה על ידי הקהילה ומתוך יוזמה של הקהילה. ספרית עיון והחלפה.

גיל שלישי – התעמלות בוקר, מחשבים, אנגלית.

עליה וקליטה – השלמת השכלה לעשר שנות לימוד, גמר ובגרויות. אולפן רפואי.

קהילה – אירועי חגים וציון ימים לאומיים, הצגות, מופעים, הרצאות, גינה קהילתית, פסטיבל בריאות וקיימות, פרויקט בריאופת, עסקטמוני, חממה עסקית לנשים, ליווי וייצוג משפטי, השכרת אולמות וכיתות, אכסניה ליוזמות תושבים ולמפגשי הסברה, גיבוש וחשיבה ועוד.
    </string>
    <string-array name="itemsType">
        <item>ילדים</item>
        <item>נשים</item>
        <item>מבוגרים</item>
    </string-array>
    <string-array name="itemsDays">
        <item>ראשון</item>
        <item>שני</item>
        <item>שלישי</item>
        <item>רביעי</item>
        <item>חמישי</item>
    </string-array>
    <string name="ok">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="clickCancel">האם לצאת בלי לשמור את החוג?</string>
    <string name="editActivity">בחר חוג</string>
    <string name="selectType">בחר סוג</string>
    <string name="selectDays">בחר ימים</string>
    <string name="selectTime">בחר שעה</string>
    <string name="mail">uinpat@gmail.com</string>
    <string name="p">uinpat123</string>
    <string name="err_msg_fname">הכנס/י שם פרטי</string>
    <string name="err_msg_lname">הכנס/י שם משפחה</string>
    <string name="err_msg_neighborhood">הכנס/י שם שכונה</string>
    <string name="err_msg_email">הכנס/י כתובת אימייל תקינה</string>
    <string name="err_msg_phone">הכנס/י טלפון נייד תקין</string>
    <string name="hint_fname">שם פרטי</string>
    <string name="hint_lname">שם משפחה</string>
    <string name="hint_neighborhood">שכונת מגורים</string>
    <string name="hint_phone">טלפון נייד</string>
    <string name="clickCancelMessage">האם לצאת מבלי לשלוח את ההודעה?</string>
    <string name="clickCancelProject">האם לצאת מבלי לשמור את הפרויקט?</string>
    <string name="editProject">בחר פרויקט</string>
    <string name="joinProject">להצטרפות לפרויקט</string>
    <string name="close">סגור</string>
    <string name="clickCancelTeam">האם לצאת מבלי לשמור את איש הצוות?</string>
    <string name="editTeam">בחר איש צוות</string>
    <string name="clickCancelWorkShop">האם לצאת מבלי לשמור את הסדנא?</string>
    <string name="clickCancelBusiness">האם לצאת מבלי לשמור את בית העסק?</string>
    <string name="editWorkShop">בחר סדנא</string>
    <string name="editBusiness">בחר עסק</string>
    <string name="editCategory">בחר קטגוריה אליה העסק שייך</string>
    <string name="workingHours">שעות פעילות המרכז:ראשון עד חמישי בין השעות 19:00–8:30</string>
    <string name="loadingActivities">טוען את החוגים..עוד רגע..</string>
    <string name="loadingCategories">טוען את הקטגוריות..עוד רגע..</string>
    <string name="loadingBusiness">טוען את העסקים..עוד רגע..</string>
    <string name="loadingAlbums">טוען את האלבומים..עוד רגע..</string>
    <string name="loadingNews">עוד רגע..</string>
    <string name="loadingProject">טוען את הפרויקטים..עוד רגע..</string>
    <string name="loadingTeam">טוען את אנשי הצוות..עוד רגע..</string>
    <string name="loadingWorkShop">טוען את הסדנאות..עוד רגע..</string>
    <string name="loading">עוד רגע..</string>
    <string name="freeSearch">חיפוש חופשי</string>
    <string name="nameSearch">חיפוש לפי שם</string>
    <string name="title_register_business">רשימת בעלי עסקים בקטמונים</string>
    <string name="errorSelectImgages">לא נבחרו תמונות להעלאה</string>
    <string name="selectImage">בחר תמונות</string>
    <string name="msgInfo">לחץ על התמונה הראשונה בלחיצה ארוכה</string>
    <string name="select">נבחרו עד כה:</string>
    <string name="image">תמונות</string>
    <string name="upload">מעלה את</string>
    <string name="selected">התמונות שנבחרו</string>
    <string name="successUpload">התמונות עלו בהצלחה</string>
    <string name="selectImages">בחר תמונות להעלאה</string>
    <string name="uploadImage">מעלה </string>
    <string name="enterMail">הקלד את כתובת האימייל שלך</string>
    <string name="enterPass">הקלד את הסיסמא שלך</string>
    <string name="error">שגיאה:</string>
    <string name="before">לפני</string>
    <string name="hour">שעות</string>
    <string name="minute">דקות</string>
    <string name="second">שניות</string>
    <string name="day">ימים</string>
    <string name="contact">פניה אישית ל</string>
    <string name="successUpdateActivity">החוג התעדכן בהצלחה</string>
    <string name="successUpdateProject">הפרויקט התעדכן בהצלחה</string>
    <string name="successUpdateWorkShop">הסדנא התעדכנה בהצלחה</string>
    <string name="successUpdateTeam">איש הצוות התעדכן בהצלחה</string>
    <string name="successUpdateBusiness">בית העסק התעדכן בהצלחה</string>
    <string name="successAddActivity">החוג נוסף בהצלחה</string>
    <string name="successAddProject">הפרויקט נוסף בהצלחה</string>
    <string name="successAddWorkShop">הסדנא נוספה בהצלחה</string>
    <string name="successAddTeam">איש הצוות נוסף בהצלחה</string>
    <string name="successAddBusiness">בית העסק נוסף בהצלחה</string>
    <string name="successAddNews">החדשה נוספה בהצלחה</string>
    <string name="successDeleteActivity">החוג נמחק בהצלחה</string>
    <string name="successDeleteProject">הפרויקט נמחק בהצלחה</string>
    <string name="successDeleteWorkShop">הסדנא נמחקה בהצלחה</string>
    <string name="successDeleteTeam">איש הצוות נמחק בהצלחה</string>
    <string name="successDeleteBusiness">בית העסק נמחק בהצלחה</string>
    <string name="noActivity">לא נמצאו חוגים</string>
    <string name="noProject">לא נמצאו פרויקטים</string>
    <string name="noWorkShop">לא נמצאו סדנאות</string>
    <string name="noTeam">לא נמצאו אנשי צוות</string>
    <string name="noBusiness">לא נמצאו עסקים</string>
    <string name="enterAddress">הקלד כתובת מלאה של העסק</string>
    <string name="afterReset">נשלח לך במייל הוראות לאיפוס סיסמא</string>
    <string name="logoProject">לא בחרת לוגו של הפרויקט</string>
    <string name="logoBusiness">לא בחרת לוגו של העסק</string>
    <string name="imageTeam">לא בחרת תמונה של איש הצוות</string>
    <string name="selectDate">בחר תאריך</string>
    <string name="downloadImage">מוריד את התמונה</string>
    <string name="successDownload">התמונה הורדה לגלרייה במכשיר</string>
    <string name="wait">נא להמתין...</string>
    <string name="sendRegister">שולח את פרטי הרישום</string>
    <string name="sendMessage">שולח את ההודעה</string>
    <string name="successRegister">נרשמת בהצלחה, ניצור איתך קשר תוך 24 שעות</string>
    <string name="successContact">ההודעה נשלחה, ניצור איתך קשר תוך 24 שעות</string>
    <string name="register">הרשמה ל</string>
    <string name="noImage">לא בחרת תמונה</string>
    <string name="addNews">מוסיף את החדשה</string>
    <string name="btn_selectType">לחץ כאן לבחירת סוג החוג</string>
    <string name="btn_selectDays">לחץ כאן לבחירת ימי החוג</string>
    <string name="nameActivity">שם החוג</string>
    <string name="desActivity">תיאור החוג</string>
    <string name="age">גילאים</string>
    <string name="timeStart">שעת התחלה</string>
    <string name="timeEnd">שעת סיום</string>
    <string name="btn_selectLogoBusiness">לחץ כאן לבחירת לוגו של העסק</string>
    <string name="des">תיאור קצר</string>
    <string name="nameBusiness">שם העסק</string>
    <string name="categoryBusiness">קטוגריית העסק</string>
    <string name="text_clickImage">לחץ על התמונה לבחירת תמונות להעלאה לאלבום</string>
    <string name="nameAlbum">שם האלבום</string>
    <string name="registerBusiness">בעל עסק בקטמונים? לחץ כאן</string>
    <string name="symbol">–</string>
    <string name="toRegister">להרשמה</string>
    <string name="share">שתף</string>
    <string name="call">חייג</string>
    <string name="sms">שלח סמס</string>
    <string name="waze">נווט</string>
    <string name="btn_selectNews">לחץ כאן לבחירת תמונה/פלייר מהמכשיר</string>
    <string name="news">תוכן ההודעה</string>
    <string name="push">עם הודעת פוש</string>
    <string name="noPush">בלי הודעת פוש</string>
    <string name="btn_selectProject">לחץ כאן לבחירת לוגו הפרויקט</string>
    <string name="desProject">תיאור הפרויקט</string>
    <string name="nameProject">שם הפרויקט</string>
    <string name="btn_selectTeam">לחץ כאן לבחירת תמונת איש צוות</string>
    <string name="nameTeam">שם איש צוות</string>
    <string name="role">תפקיד</string>
    <string name="emailITeam">כתובת אימייל ליצירת קשר</string>
    <string name="nameWorkShop">שם הסדנא</string>
</resources>