<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_us"
    style="@style/general_match_parent"
    android:background="@color/colorBackgroundHome"
    tools:context="com.example.user.app_matnas.activity_contactUs">


    <TextView
        android:id="@+id/contactus_Taddress"
        style="@style/contactus_Taddress"
        android:layout_alignLeft="@+id/contactus_address"
        android:layout_alignStart="@+id/contactus_address"
        android:text="@string/contactus_Taddress" />

    <TextView
        android:id="@+id/contactus_address"
        style="@style/contactus_address"
        android:layout_toLeftOf="@+id/map"
        android:layout_toStartOf="@+id/map"
        android:text="@string/contactus_address" />

    <fragment
        android:id="@+id/map"
        style="@style/map"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:id="@+id/form_layout"
        style="@style/general_match_parent"
        android:layout_below="@+id/map"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/form_layout_internal"
            style="@style/general_match_parent">


            <TextView
                android:id="@+id/form_title"
                style="@style/form_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/form_title" />


            <EditText
                android:id="@+id/form_name"
                style="@style/form_fields"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/form_title"
                android:layout_alignStart="@+id/form_title"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/form_name"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/form_phone"
                style="@style/form_fields"
                android:layout_marginLeft="31dp"
                android:layout_marginStart="31dp"
                android:layout_toEndOf="@+id/form_name"
                android:layout_toRightOf="@+id/form_name"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/form_phone"
                android:inputType="phone" />


            <EditText
                android:id="@+id/form_message"
                style="@style/form_message"
                android:layout_alignLeft="@+id/form_name"
                android:layout_alignStart="@+id/form_name"
                android:layout_below="@+id/form_phone"
                android:backgroundTint="@color/colorPrimaryDark"
                android:breakStrategy="balanced"
                android:hint="@string/form_message"
                android:inputType="textMultiLine" />


            <Button
                android:id="@+id/form_btn"
                android:layout_width="100dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/form_phone"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.01"
                android:background="@color/colorPrimaryDark"
                android:text="@string/form_btn"
                android:textColor="#fff" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>