<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <Button
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_age_activity"
        android:layout_alignLeft="@+id/et_age_activity"
        android:layout_alignRight="@+id/et_age_activity"
        android:layout_alignStart="@+id/et_age_activity"
        android:layout_below="@+id/et_age_activity"
        android:layout_marginTop="26dp"
        android:onClick="onClickDays"
        android:text="@string/btn_selectDays" />

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_name_activity"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_main"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/nameActivity"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_age_activity"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type"
        android:layout_alignStart="@+id/type"
        android:layout_below="@+id/type"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPersonName" />


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/days"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/days"
        android:layout_alignTop="@+id/days"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/timeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/description"
            android:layout_alignEnd="@+id/days"
            android:layout_alignLeft="@+id/days"
            android:layout_alignRight="@+id/days"
            android:layout_alignStart="@+id/days"
            android:layout_marginBottom="27dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/timeStart"
            android:onClick="ClickOnTime" />


        <EditText
            android:id="@+id/timeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/timeStart"
            android:layout_alignBottom="@+id/timeStart"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_toEndOf="@+id/description"
            android:layout_toRightOf="@+id/description"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/timeEnd"
            android:onClick="ClickOnTime" />

    </TableRow>

    <EditText
        android:id="@+id/description"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableRow"
        android:layout_alignStart="@+id/tableRow"
        android:layout_below="@+id/tableRow"
        android:ems="10"
        android:hint="@string/desActivity"
        android:inputType="textPersonName"
        android:maxLength="30" />

    <Button
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_name_activity"
        android:layout_alignLeft="@+id/et_name_activity"
        android:layout_alignRight="@+id/et_name_activity"
        android:layout_alignStart="@+id/et_name_activity"
        android:layout_below="@+id/et_name_activity"
        android:layout_marginTop="29dp"
        android:onClick="onClickType"
        android:text="@string/btn_selectType" />

</RelativeLayout>
