<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_content_news"
        android:layout_alignStart="@+id/et_content_news"
        android:layout_below="@+id/et_content_news"
        android:layout_marginTop="24dp"
        android:onClick="onClickNewsImage"
        android:text="@string/btn_selectNews" />

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_content_news"
        android:layout_width="290dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_main"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/news"
        android:inputType="textMultiLine"
        android:maxLength="172" />

    <ImageView
        android:id="@+id/imageNews"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_above="@+id/radioGroup"
        android:layout_alignEnd="@+id/btn_selectImage"
        android:layout_alignLeft="@+id/btn_selectImage"
        android:layout_alignRight="@+id/btn_selectImage"
        android:layout_alignStart="@+id/btn_selectImage"
        android:layout_below="@+id/btn_selectImage"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:src="@drawable/gallery_event" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageNews"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageNews"
        android:layout_marginBottom="12dp">

        <RadioButton
            android:id="@+id/rb_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageNews"
            android:layout_alignRight="@+id/imageNews"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="13dp"
            android:text="@string/push" />

        <RadioButton
            android:id="@+id/rb_notSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.88"
            android:text="@string/noPush" />

    </RadioGroup>

</RelativeLayout>